# aix

./: README.md
backend/: db.py  main.py  pyproject.toml
backend/models/: __init__.py  account.py  payment.py  token.py  transaction.py  user.py
backend/routes/: __init__.py  auth.py  transactions.py  user.py  utils.py
backend/routes/payment/: __init__.py  bank.py  card.py  cash.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/(auth)/: _layout.tsx  index.tsx  signup.tsx
frontend/assets/styles/: landing.style.ts  login.style.ts  signup.style.ts  typograph.ts
frontend/components/: SafeScreen.tsx
frontend/constants/: colors.ts
frontend/store/: authStore.ts
frontend/utils/: api.ts
